--- a/style.css
+++ b/style.css
@@ -10,10 +10,35 @@ body {
 
 .sidebar {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
     background-color: #5e3773;
     box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .info-container {
     height: 100vh;
+}
+
+.profile-container {
+    height: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-frame {
+    border-radius: 50%;
+    width: 270px;
+    height: 270px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0px 0px 15px #ceadea;
+}
+
+.profile-frame > img {
+    display: inline;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
 }
