add background to profile image

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #5e3773;
     box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
@@ -23,17 +22,37 @@ body {
 .profile-container {
     height: 33%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
+    position: relative;
+}
+
+.profile-background {
+    position: absolute;
+    background-color: #5e3773;
+    height: 70%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .profile-frame {
     border-radius: 50%;
-    width: 270px;
-    height: 270px;
     position: relative;
     overflow: hidden;
-    box-shadow: 0px 0px 15px #ceadea;
+    display: flex;
+    align-items: center;
+}
+
+.inner-frame {
+    width: 200px;
+    height: 200px;
+}
+
+.outter-frame {
+    padding: 8px;
+    background-color: white;
 }
 
 .profile-frame > img {
