--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 .outter-frame {
     padding: 8px;
     background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
 
 .profile-frame > img {
