add education info

--- a/style.css
+++ b/style.css
@@ -141,11 +141,6 @@ body {
     width: 50%;
 }
 
-.education-info-container {
-    display: flex;
-    width: 50%;
-}
-
 .table-title {
     font-size: 80%;
     font-weight: bold;
@@ -157,4 +152,27 @@ body {
 
 .table-info > a {
     color: black;
+}
+
+.education-info-container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.university-container {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.university-detail {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10px;
+}
+
+.university-container > img {
+    width: 90px;
+    height: 90px;
 }
